# Automatic-Audio-Dataset-Maker

./: .gitignore  ADM_Main.py  README.md  Step1_DgramTrans2JSON.py  Step1_Transcribe_Audio.py  Step2_Convert_JSON2SRT.py  Step2_Convert_JSONS2SRT.py  Step3_Segment_Create_Metadata.py  Step3_SegmentandCreate_Metadata.py  Step4_make_train_and_eval.py  Step4_split_metadata.py  adm_main.py  check_unused.py  clean.py  config.yaml  convert_dataspeech.py  filter_parquet.py  main.py  push_to_hub.py  pyproject.toml  requirements.txt  requirements.txt.old  setup.py  test.py  test_xhosa_whisper.py
dataspeech/: main.py  pyproject.toml  requirements.txt  setup.py
dataspeech/dataspeech/: main.py  pitch.py
dataspeech/dataspeech/cpu_enrichments/: rate.py
dataspeech/dataspeech/gpu_enrichments/: squim.py
dataspeech/examples/prompt_creation/: run_prompt_creation_1k.sh
dataspeech/examples/tagging/: run_main_1k.sh
dataspeech/scripts/: metadata_to_text.py
tests/: test_dummy.py
tools/: audio_distribution_visualize.py  calculate_total_audio_length.py  cleargpu.py  concatwavs.py  constants.py  convert_dataspeech.py  convert_raw_audio.py  convert_sample_rate.py  convert_to_audio.py  convertaudio.py  deEecho.py  denoiser.py  dereverb.py  desilence.py  dgtester.py  normalize_folder.py  remove_nonspeech.py  run_denoiser.py  sanitize_filenames.py  seperatespeakers.py  stereo_to_mono.py
tools/denoiser/Mel-Band-Roformer-Vocal-Model/models/mel_band_roformer/: .gitignore
tools/speaker_seperation/: execute_diarization.py  seperate.py
