[project]
name = "dataspeech"
version = "0.1.0"
description = "A suite of utility scripts designed to tag speech datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets[audio]",
    "penn",
    "g2p",
    "demucs",
    "transformers",
    "accelerate",
    "bitsandbytes"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"